# ccl

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.lcc  Makefile.lcc64  Makefile.msvc  README.md  appveyor.yml  build.bat  run-tests.bat
include/: containers.h
src/: bloom.c
